--- a/pinned-memory/makefile
+++ b/pinned-memory/makefile
@@ -1,10 +1,10 @@
-ifeq 'xlf' 'pgi'
+ifeq 'pgi' 'pgi'
 	# PGI compiler
 	F90=pgf90
 	CC=pgcc
 	CUDAFLAGS= -Mcuda=cc60,nordc,maxregcount:64,ptxinfo -fast -Mfprelaxed -L/usr/local/cuda/lib64 -lnvToolsExt
 	#CUDAFLAGS= -Mcuda=cc60,nordc,maxregcount:48,ptxinfo,loadcache:L1 -fast -Mfprelaxed
-	F90FLAGS=-O3 -mp
+	F90FLAGS=-O3 -mp -acc
 else
 	# xlcuf compiler
 	F90=xlf_r
