changed to detect default stream

--- a/callingC/makefile
+++ b/callingC/makefile
@@ -21,9 +21,9 @@ CLIBS = -L$(CUDA_HOME)/lib64 -lstdc++
 
 #INCPATH         = $(MPI_INC_PATH) -I$(CUDA_HOME)/include
 
-F90FLAGS    = -Mcuda=cc$(COMPUTE_CAPABILITY),nordc,maxregcount:64,ptxinfo,loadcache:L1,cuda9.1 -fast -Mfprelaxed -O3 -Kpic
+F90FLAGS    = -mp -Mcuda=cc$(COMPUTE_CAPABILITY),nordc,maxregcount:64,ptxinfo,loadcache:L1,cuda9.1 -fast -Mfprelaxed -O3 -Kpic
 
-LINKFLAGS       = -g -Wl,-rpath=$(PGI_HOME)/lib:$(CUDA_HOME)/lib64
+LINKFLAGS       = -mp -g -Wl,-rpath=$(PGI_HOME)/lib:$(CUDA_HOME)/lib64
 
 F90=pgf90
 CC=nvcc
@@ -45,7 +45,7 @@ driver.o: driver.F90
 #	${F90} -c -o ../nvtx/nvtx_mod.o ../nvtx/nvtx_mod.F90 ${F90FLAGS} ${CUDAFLAGS}
 
 %.o : %.cu
-	nvcc --maxrregcount=64 -gencode=arch=compute_70,code=sm_70 --resource-usage -Xptxas -v -O3 -c $< -o $@
+	nvcc --maxrregcount=64 -gencode=arch=compute_70,code=sm_70 --default-stream per-thread --resource-usage -Xptxas -v -O3 -c $< -o $@
 
 clean:
 	rm -f ${comp}test *.o *.lst *.mod ../nvtx/*.o
