--- a/instruction-level-parallelism/makefile
+++ b/instruction-level-parallelism/makefile
@@ -1,25 +1,10 @@
-comp=pgi
-
-ifeq '${comp}' 'pgi'
-	# PGI compiler
-	F90=pgf90
-	CC=pgcc
-	#CUDAFLAGS = -Mcuda=cc70,nordc,maxregcount:64,ptxinfo,lineinfo,cuda10.1,unroll -fast -Mfprelaxed -L/usr/local/cuda/lib64 -lnvToolsExt
-	CUDAFLAGS = -Mcuda=cc70,nordc,maxregcount:64,ptxinfo,lineinfo,cuda10.1,nounroll -Mfprelaxed -L/usr/local/cuda/lib64 -lnvToolsExt
-	CUDAFLAGS+= -Minfo=inline,accel -acc=noautopar
-	F90FLAGS=-gopt -mp -Minfo -O1 -Mnounroll -Mnovect
+# important flags here are -fast or -02. unroll or nounroll do not seem to make any difference.
+	F90=nvfortran
+	CUDAFLAGS = -Mcuda=cc70,nordc,maxregcount:64,ptxinfo,lineinfo,unroll -fast -Mfprelaxed -L/usr/local/cuda/lib64 -lnvToolsExt
+	#CUDAFLAGS = -Mcuda=cc70,nordc,maxregcount:64,ptxinfo,lineinfo,nounroll -Mfprelaxed -L/usr/local/cuda/lib64 -lnvToolsExt
+	CUDAFLAGS+= -acc=noautopar
+	F90FLAGS=-gopt -mp -Minfo -Mnounroll -Mnovect
 	LINKFLAGS = -ta=tesla:pinned
-else
-	# xlcuf compiler
-	F90=xlf_r
-	CC=xlc_r
-	#CUDAFLAGS= -qcuda -qtgtarch=sm_60 -W@,"-v,--maxrregcount=48" -qpath=IL:/home/dappelh/ibmcmp/specialfixes
-	CUDAFLAGS= -qcuda -qtgtarch=sm_70 -W@,"-v,--maxrregcount=64" -lnvToolsExt
-	CUDAFLAGS+= -qcheck -qsigtrap -g1
-	#F90FLAGS=-O3 -qhot=novector -qsimd=auto -qarch=pwr8 -qtune=pwr8 -qsmp=omp -qoffload -lessl
-	F90FLAGS=-O3 -qhot=novector -qsimd=auto -qarch=pwr9 -qtune=pwr9 -qsmp=omp -qoffload #-lomp
-endif
-
 
 
 build: driver.o nvtx_mod.o
