--- a/pinned-memory/mpi-version/makefile
+++ b/pinned-memory/mpi-version/makefile
@@ -2,14 +2,14 @@ comp=pgi
 
 ifeq '${comp}' 'pgi'
 	# PGI compiler
-	export OMPI_FC=pgf90
+	export OMPI_FC=nvfortran
 	F90=mpif90
-	CC=pgcc
-	CUDAFLAGS= -Mcuda=cc60,nordc,maxregcount:64,ptxinfo -fast -Mfprelaxed -L/usr/local/cuda/lib64 -lnvToolsExt
+	CC=nvc
+	CUDAFLAGS= -Mcuda=cc80,nordc,maxregcount:64,ptxinfo -fast -Mfprelaxed -L/usr/local/cuda/lib64
 	#CUDAFLAGS= -Mcuda=cc60,nordc,maxregcount:48,ptxinfo,loadcache:L1 -fast -Mfprelaxed
 	F90FLAGS=-O3 -mp
 	CUDAFLAGS+= -acc
-	LINKFLAGS = -ta=tesla:pinned
+	LINKFLAGS = -ta=tesla:pinned -lnvhpcwrapnvtx
 else
 	# xlcuf compiler
 	export OMPI_FC=xlf_r
@@ -26,16 +26,13 @@ endif
 	MPI_LINK_FLAGS = $(shell mpif90 --showme:link)
 
 
-build: driver-mpi.o nvtx_mod.o
-	${F90} -o ${comp}test driver-mpi.o ../../nvtx/nvtx_mod.o ${F90FLAGS} ${CUDAFLAGS} ${LINKFLAGS}
+build: driver-mpi.o
+	${F90} -o ${comp}test driver-mpi.o ${F90FLAGS} ${CUDAFLAGS} ${LINKFLAGS}
 
 
-driver-mpi.o: driver-mpi.F90 nvtx_mod.o
+driver-mpi.o: driver-mpi.F90
 	${F90} -c -o driver-mpi.o driver-mpi.F90 ${F90FLAGS} ${CUDAFLAGS}
 
-nvtx_mod.o: ../../nvtx/nvtx_mod.F90
-	${F90} -c -o ../../nvtx/nvtx_mod.o ../../nvtx/nvtx_mod.F90 ${F90FLAGS} ${CUDAFLAGS}
-
 clean:
-	rm -f ${comp}test *.o *.lst *.mod ../nvtx/*.o
+	rm -f ${comp}test *.o *.lst *.mod
 
